--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -40,7 +40,7 @@
 
   <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color:white; min-height:650px">
     <div class="container-fluid mb-4 text-center">
-          <legend class='border-bottom h1'>Stroke Analysis</legend>
+          <legend class='h1 header-main bottom-bord'>Stroke Analysis</legend>
   </div>
     <div id="content">
     <div class="containter mb-4">
@@ -70,7 +70,7 @@
             <label for="exampleFormControlFile1">Example file input</label>
             <input class='form-control' type="file" name="user_video" class="form-control-file" id="exampleFormControlFile1" required>
           </div>
-          <button type="submit" class="btn btn-primary btn-rounded pl-4 pr-4" id="stroke_submit" onclick="loading();" style="border-radius: 20px;">Submit</button>
+          <button type="submit" class="btn btn-primary btn-rounded pl-4 pr-4 button-main" id="stroke_submit" onclick="loading();">Submit</button>
         </form>
         <br>
         <p class='text-center' style="color: red;">*Please do not refresh page when results are generated. Doing so will duplicate your results.<br>
