--- a/Flask_template/templates/gallery.html
+++ b/Flask_template/templates/gallery.html
@@ -40,7 +40,7 @@
 
   <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color: white;">
     <div class="container-fluid mb-4 text-center">
-          <legend class='border-bottom h1'>Photo Gallery</legend>
+          <legend class='h1 header-main bottom-bord'>Photo Gallery</legend>
   </div>
     <div id="content">
     <div class="containter mb-4">
