--- a/Flask_template/templates/index.html
+++ b/Flask_template/templates/index.html
@@ -19,8 +19,8 @@
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
 
   </head>
-  <body style='background: rgb(247,229,127);
-  background: linear-gradient(45deg, rgba(247,229,127,1) 0%, rgba(129,224,249,1) 50%, rgba(252,176,69,1) 100%);'>
+  <body style='background: rgb(58,69,241);
+  background: linear-gradient(45deg, rgba(58,69,241,1) 0%, rgba(225,185,230,1) 72%, rgba(238,238,180,1) 100%);'>
 
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-transparent">
@@ -47,56 +47,15 @@
       </nav>
     </header>
 
-    <main role="main" style="margin-top: -10%;">
-
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="first-slide" src="/static/assets/img/carousel1.jpg" alt="First slide">
-            <div class="container">
-              <div class="carousel-caption text-left">
-                <h1>Tennis Sense</h1>
-                <p>AI-Powered Tennis Analytics</p>
-                <p><a class="btn btn-primary btn-xl text-uppercase" href="{{ url_for('register') }}" target="_blank">Register</a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="second-slide" src="/static/assets/img/carousel2.jpg" alt="Second slide">
-            <div class="container">
-              <div class="carousel-caption text-left">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="third-slide" src="/static/assets/img/carousel3.jpg" alt="Third slide">
-            <div class="container">
-              <div class="carousel-caption text-left">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+    <main role="main">
+      <div class='container text-center mt-5 p-5'>
+        <h1 style="font-size: 300%;" class="header-main">Tennis Sense</h1>
+        <p>AI-Powered Tennis Analytics</p>
+        <p><a class="btn btn-primary btn-xl text-uppercase button-main" href="{{ url_for('register') }}" target="_blank">Register</a>
+        </p>
       </div>
+      
+      
 
 
       <!-- Marketing messaging and featurettes
