--- a/Flask_template/templates/login.html
+++ b/Flask_template/templates/login.html
@@ -4,7 +4,7 @@
 
 <div class="container col-md-6 home shadow rounded p-4 mt-5 mb-5" data-aos="fade-up" style="background-color: white;">
     <div class="container text-center">
-        <legend class='border-bottom mb-4 h1'>Login</legend>
+        <legend class='mb-4 h1 header-main bottom-bord'>Login</legend>
     </div>
     <form method="POST" action='{{url_for("login")}}'>
       {{form.hidden_tag()}}
@@ -26,7 +26,7 @@
         </div>
         <br>
         <div class="container d-flex justify-content-center">
-            {{form.submit(class="btn btn-primary btn-l rounded")}}
+            {{form.submit(class="btn btn-xl text-uppercase rounded button-main")}}
         </div>
       </form>
       <br>
