--- a/Flask_template/templates/layout.html
+++ b/Flask_template/templates/layout.html
@@ -25,11 +25,15 @@
         <!-- AOS  animations-->
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+        <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
 
         <title></title>
 
     </head>
-  <body style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: rgb(58,69,241);
+  <body style="font-family: 'Open Sans', sans-serif;; background: rgb(58,69,241);
   background: linear-gradient(45deg, rgba(58,69,241,1) 0%, rgba(225,185,230,1) 72%, rgba(238,238,180,1) 100%);">
     
           {% block body %}
