--- a/Flask_template/templates/index.html
+++ b/Flask_template/templates/index.html
@@ -16,11 +16,18 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/carousel.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" />
 
+    <!-- font awesome -->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
 
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+
   </head>
-  <body style='background: rgb(58,69,241);
-  background: linear-gradient(45deg, rgba(58,69,241,1) 0%, rgba(225,185,230,1) 72%, rgba(238,238,180,1) 100%);'>
+  <body style="background: rgb(58,69,241);
+  background: linear-gradient(45deg, rgba(58,69,241,1) 0%, rgba(225,185,230,1) 72%, rgba(238,238,180,1) 100%);
+  font-family: 'Open Sans', sans-serif;">
 
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-transparent">
