added mysql databse connection and changed css

--- a/Flask_template/templates/index.html
+++ b/Flask_template/templates/index.html
@@ -25,26 +25,24 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
 
   </head>
-  <body style="background: rgb(58,69,241);
-  background: linear-gradient(45deg, rgba(58,69,241,1) 0%, rgba(225,185,230,1) 72%, rgba(238,238,180,1) 100%);
-  font-family: 'Open Sans', sans-serif;">
+  <body style="background-image:url(../static/assets/img/cool.png); font-family: 'Open Sans', sans-serif;">
 
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-transparent">
-        <a class="navbar-brand" href="#">Carousel</a>
+      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-transparent">
+        <a class="navbar-brand nav-color" href="#">Carousel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link nav-color" href="#">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link nav-color" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
+              <a class="nav-link nav-color" href="#">Disabled</a>
             </li>
           </ul>
           <form class="form-inline mt-2 mt-md-0">
