--- a/Flask_template/templates/layout.html
+++ b/Flask_template/templates/layout.html
@@ -33,8 +33,7 @@
         <title></title>
 
     </head>
-  <body style="font-family: 'Open Sans', sans-serif;; background: rgb(58,69,241);
-  background: linear-gradient(45deg, rgba(58,69,241,1) 0%, rgba(225,185,230,1) 72%, rgba(238,238,180,1) 100%);">
+  <body style="font-family: 'Open Sans', sans-serif; background-image:url(../static/assets/img/cool.png)">
     
           {% block body %}
 
