--- a/Flask_template/static/css/custom.css
+++ b/Flask_template/static/css/custom.css
@@ -47,10 +47,16 @@
 /* Navbar */
 .nav-link:hover{
   transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-  border-bottom: 1px white solid;
+  border-bottom: 1px black solid;
   transition: transform .2s ease-in-out;
 }
+.nav-color {
+  color: #EC8107 !important;
+}
 
+.nav-color-active {
+  color: #E94F01 !important
+}
 /* font colors */
 .header-main {
   color: #1d41f4
@@ -58,16 +64,16 @@
 
 /* button */
 .button-main {
-  background: rgb(29,65,244);
-background: linear-gradient(45deg, rgba(29,65,244,1) 0%, rgba(250,24,178,1) 99%);
-  border: rgb(29,65,244) !important;
+  background: rgb(75,204,247);
+background: linear-gradient(163deg, rgba(75,204,247,1) 34%, rgba(95,78,247,1) 100%);
+  border: rgb(75,204,247) !important;
   color: white !important;
 }
 
 .button-main:hover{
-  background: rgb(100,0,244);
-background: linear-gradient(45deg, rgba(100,0,244,1) 0%, rgba(250,0,150,1) 99%);
-  border: rgb(100,0,244) !important;
+  background: rgb(75,151,247);
+background: linear-gradient(163deg, rgba(75,151,247,1) 34%, rgba(20,2,102,1) 100%);
+  border: rgb(75,151,247) !important;
 }
 
 .button-radius {
@@ -77,9 +83,10 @@ background: linear-gradient(45deg, rgba(100,0,244,1) 0%, rgba(250,0,150,1) 99%);
 
 /* border */
 .bottom-bord {
-  border-bottom: rgba(225,185,230,1) 2px solid !important;
+  border-bottom: #EC8107 2px solid !important;
 }
 
 .whole-bord {
-  border: rgba(225,185,230,1) 1px solid !important;
+  border: #EC8107 1px solid !important;
 }
+
