--- a/Flask_template/templates/home.html
+++ b/Flask_template/templates/home.html
@@ -1,24 +1,24 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<nav class="navbar navbar-expand-sm navbar-dark bg-transparent">
-  <a class="navbar-brand" href="#" style="margin-left: 2%;">Tennis Sense</a>
+<nav class="navbar navbar-expand-sm navbar-light bg-transparent">
+  <a class="navbar-brand nav-color" href="#" style="margin-left: 2%;">Tennis Sense</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+        <a class="nav-link nav-color-active" href="{{ url_for('home') }}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('stroke') }}">Analysis</a>
+        <a class="nav-link nav-color" href="{{ url_for('stroke') }}">Analysis</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{url_for('history')}}">History</a>
+        <a class="nav-link nav-color" href="{{url_for('history')}}">History</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{url_for('gallery')}}">Gallery</a>
+        <a class="nav-link nav-color" href="{{url_for('gallery')}}">Gallery</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
