--- a/Flask_template/templates/home.html
+++ b/Flask_template/templates/home.html
@@ -44,15 +44,16 @@
   
   {% else %}
   
-  <div class="container text-center">
-    <h3>Average Score: <strong>{{average}}</strong></h3>
+  <div class="row">
+
+  
+  <div class="container">
+    <h3>Average Score: <br><strong style="font-size: 250%;">{{average}}</strong></h3>
   </div>
-  <br>
 
   <div class="container text-center">
     <h3>Most Recent:</h3>
     
-    <div class="container">
     <div class="row">
       <div class="col-md-3">
       
@@ -78,9 +79,9 @@
         
       </div>
     </div>
-  </div>
 
   </div>
+</div>
   {% endif %}
 
 </div>
