--- a/Flask_template/templates/index.html
+++ b/Flask_template/templates/index.html
@@ -74,13 +74,13 @@
         <div class="row" data-aos="fade-down">
           
           <div class="col-lg-6 text-center">
-            <div class="container p-3 rounded shadow footer-color">
+            <div class="container p-3 mb-3 rounded shadow footer-color">
               <span class="fa-stack fa-4x">
                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                 <i class="fas fa-chart-pie fa-stack-1x fa-inverse"></i>
             </span>
               <h2>Stroke Statistics</h2>
-              <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+              <p>Compare your serve to a professional tennis player of your choice and recieve visual data feedback of your body movement throughout the shot</p>
             </div>
           </div><!-- /.col-lg-6 -->
           <div class="col-lg-6 text-center">
@@ -90,7 +90,7 @@
                 <i class="fas fa-walking fa-stack-1x fa-inverse"></i>
             </span>
               <h2>Stroke Recommendations</h2>
-              <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+              <p>Using AI tools and professional tennis player advise, you will recieve personalized recommendations on how to improve your serve technique.</p>
             </div>
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
@@ -102,7 +102,7 @@
 
         <div class="row featurette p-2 rounded shadow footer-color" data-aos="fade-right">
           <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+            <h2 class="featurette-heading">Utilizing Pose Estimation. <span class="text-muted">It'll blow your mind.</span></h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5">
@@ -114,7 +114,7 @@
 
         <div class="row featurette p-2 rounded shadow footer-color" data-aos="fade-left">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+            <h2 class="featurette-heading">Classifying Your Shot With Azure Custom Vision. <span class="text-muted">See for yourself.</span></h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -126,7 +126,7 @@
 
         <div class="row featurette p-2 rounded shadow footer-color" data-aos="fade-right">
           <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+            <h2 class="featurette-heading">Improve Your Game, <span class="text-muted">And Repeat.</span></h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5">
