--- a/Flask_template/templates/gallery.html
+++ b/Flask_template/templates/gallery.html
@@ -37,7 +37,7 @@
   <!-- start of content that hides on click -->
 
 
-
+<div class="container m-5">
   <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color: white;">
     <div class="container-fluid mb-4 text-center">
           <legend class='h1 header-main bottom-bord'>Photo Gallery</legend>
@@ -51,7 +51,7 @@
    </div>      
     </div>
   </div>
-<br>
+</div>
 <br>
 
 <!-- Footer -->
