--- a/Flask_template/templates/register.html
+++ b/Flask_template/templates/register.html
@@ -9,7 +9,7 @@
     <form method="POST" action='{{url_for("register")}}'>
       {{form.hidden_tag()}}
 
-        <div class="form-group text-center mt-3">
+        <div class="form-group text-left mt-3">
           <div>
             {{form.first.label}}
           </div>
@@ -17,8 +17,7 @@
             {{form.first(class="form-control")}}
           </div>
         </div>
-        <br>
-        <div class="form-group text-center mb-4">
+        <div class="form-group text-left mb-3">
           <div>
             {{form.last.label}}
           </div>
@@ -26,7 +25,7 @@
             {{form.last(class="form-control")}}
           </div>
         </div>
-        <div class="form-group text-center mb-4">
+        <div class="form-group text-left mb-3">
           <div>
             {{form.email.label}}
           </div>
@@ -34,7 +33,7 @@
             {{form.email(class="form-control")}}
           </div>
         </div>
-        <div class="form-group text-center mb-4">
+        <div class="form-group text-left mb-3">
           <div>
             {{form.password.label}}
           </div>
@@ -42,7 +41,7 @@
             {{form.password(class="form-control")}}
           </div>
         </div>
-        <div class="form-group text-center mb-4">
+        <div class="form-group text-left mb-3">
           <div>
             {{form.passconfirm.label}}
           </div>
@@ -50,7 +49,6 @@
             {{form.passconfirm(class="form-control")}}
           </div>
         </div>
-        <br>
         <div class="container d-flex justify-content-center">
             {{form.submit(class="btn btn-primary btn-xl rounded button-main")}}
         </div>
