--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -37,7 +37,7 @@
   <!-- start of content that hides on click -->
 
 
-
+  <div class="container m-5">
   <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color:white; min-height:650px">
     <div class="container-fluid mb-4 text-center">
           <legend class='h1 header-main bottom-bord'>Stroke Analysis</legend>
@@ -47,8 +47,8 @@
       <h5>Please upload a video of the desired stroke you wish to analyze</h5>
       <p>Important Note: Click <a href="">here</a> for instructions on how to crop video before submission.</p>
    </div>
-        <form method="POST" action='{{url_for("stroke")}}' class="container col-md-8 text-center" enctype="multipart/form-data">
-          <div class="form-group">
+        <form method="POST" action='{{url_for("stroke")}}' class="container col-md-8" enctype="multipart/form-data">
+          <div class="form-group text-left">
             <label for="exampleFormControlSelect1">Professional Player</label>
             <select name="player" class="form-control" id="exampleFormControlSelect1">
               <option value="djok">Novak Djokovic</option>
@@ -57,7 +57,7 @@
               <option value="serena">Serena Williams</option>
             </select>
           </div>
-          <div class="form-group">
+          <div class="form-group text-left">
             <label for="exampleFormControlSelect2">Stroke</label>
             <select name="stroke" class="form-control" id="exampleFormControlSelect2">
               <option value="serve">Serve</option>
@@ -66,7 +66,7 @@
               <option value="volley">Volley</option>
             </select>
           </div>
-          <div class="form-group">
+          <div class="form-group text-left">
             <label for="exampleFormControlFile1">Example file input</label>
             <input class='form-control' type="file" name="user_video" class="form-control-file" id="exampleFormControlFile1" required>
           </div>
@@ -83,6 +83,7 @@
       <div class='container-fluid text-center' id="loading" style="display:none"></div>
 
   </div>
+</div>
 <br>
 <br>
 
