fixing div height

--- a/Flask_template/templates/home.html
+++ b/Flask_template/templates/home.html
@@ -90,20 +90,26 @@
           <div class="container p-3 ml-4 mr-4 text-center bottom-bord">
             <a class="btn btn-primary btn-xl text-uppercase button-main p-3" href="{{ url_for('stroke') }}">Stroke Analysis</a>
           </div>
-        <div class="col-md-4 text-center p-3">
-          <p>Video tape your serve from the side of your dominant arm or your racquet holding arm. You may need a coach/participant to help with the recording.</p>
+        <div class="col-lg-4 text-center p-3">
+          <div class="container" style="min-height: 150px; max-height: 150px">
+            <p>Video tape your serve from the side of your dominant arm or your racquet holding arm. You may need a coach/participant to help with the recording.</p>
+          </div>
           <div class='container whole-bord'>
             <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase' style="height: 400px; width:100%">
         </div>
         </div>
-        <div class="col-md-4 text-center p-3">
-          <p>Trim your serve clip to start when the racquet is about to begin its takeback and finish when the non-dominant leg has landed and absorbed the impact.</p>
+        <div class="col-lg-4 text-center p-3">
+          <div class="container" style="min-height: 150px; max-height: 150px">
+            <p>Trim your serve clip to start when the racquet is about to begin its takeback and finish when the non-dominant leg has landed and absorbed the impact.</p>
+          </div>
           <div class='container whole-bord'>
               <img src="../static/assets/img/phases/load.jpg" class="img-fluid" alt="Responsive image" style="height: 400px; width:100%">
         </div>
         </div>
-        <div class="col-md-4 text-center p-3">
-          <p>Select the professional player that you most want to mirror to recieve relevant comparison feedback. Analysis will compare your serves and reccommend further steps.</p>
+        <div class="col-lg-4 text-center p-3">
+          <div class="container" style="min-height: 150px; max-height: 150px">
+            <p>Select the professional player that you most want to mirror to recieve relevant comparison feedback. Analysis will compare your serves and reccommend further steps.</p>
+          </div>
           <div class='container whole-bord'>
               <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase' style="height: 400px; width:100%">
         </div>
