--- a/Flask_template/templates/gallery.html
+++ b/Flask_template/templates/gallery.html
@@ -42,17 +42,36 @@
     <div class="container-fluid mb-4 text-center">
           <legend class='h1 header-main bottom-bord'>Photo Gallery</legend>
   </div>
-    <div id="content">
     <div class="containter mb-4">
       <h5>Check out the different professionals and their serves</h5>
    </div> 
    <div class="container">
- 
-   </div>      
+      <p>Tracking Poses</p>
+   </div>
+   <div class="row">
+     <div class="col-md-3">
+       <div class="container p-1 whole-bord">
+          <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+       </div>
+     </div>
+     <div class="col-md-3">
+       <div class="container p-1 whole-bord">
+         <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+       </div>
     </div>
+    <div class="col-md-3">
+      <div class="container p-1 whole-bord">
+          <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="container p-1 whole-bord">
+        <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase' style="height: 300px; width:100%"> 
+      </div>
+    </div>
+   </div>    
   </div>
 </div>
-<br>
 
 <!-- Footer -->
   <div class="container-fluid p-4 footer-color">
