--- a/Flask_template/templates/gallery.html
+++ b/Flask_template/templates/gallery.html
@@ -37,41 +37,68 @@
   <!-- start of content that hides on click -->
 
 
-<div class="container m-5">
   <div class="container home shadow rounded p-4 mt-5 mb-5 text-center" data-aos="fade-up" style="background-color: white;">
     <div class="container-fluid mb-4 text-center">
           <legend class='h1 header-main bottom-bord'>Photo Gallery</legend>
   </div>
     <div class="containter mb-4">
-      <h5>Check out the different professionals and their serves</h5>
+      <h5>Check out the image gallery to better understand how the tool works behind the scenes</h5>
    </div> 
    <div class="container">
       <p>Tracking Poses</p>
    </div>
+
    <div class="row">
      <div class="col-md-3">
-       <div class="container p-1 whole-bord">
-          <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
-       </div>
+       <div class="container p-1">
+          <img src="../static/assets/img/djok_gallery/djok_start.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+          <label class="decrease-font">Start</label>
+        </div>
      </div>
      <div class="col-md-3">
-       <div class="container p-1 whole-bord">
-         <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
-       </div>
+       <div class="container p-1">
+         <img src="../static/assets/img/djok_gallery/djok_load.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+         <label class="decrease-font">Load</label>
+        </div>
     </div>
     <div class="col-md-3">
-      <div class="container p-1 whole-bord">
-          <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
-      </div>
+      <div class="container p-1">
+          <img src="../static/assets/img/djok_gallery/djok_extend.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+          <label class="decrease-font">Extend</label>
+        </div>
     </div>
     <div class="col-md-3">
-      <div class="container p-1 whole-bord">
-        <img src="../static/assets/img/angles/angles.jpg" class="img-fluid" alt="Responsive image" id='start_phase' style="height: 300px; width:100%"> 
+      <div class="container p-1">
+        <img src="../static/assets/img/djok_gallery/djok_finish.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%"> 
+        <label class="decrease-font">Finish</label>
       </div>
     </div>
+    <div class="container-fluid text-center">
+      <button type="submit" class="btn btn-secondary btn-sm rounded" id="pose_video" data-toggle="modal" data-target="#exampleModal1">Watch Serve</button>
+  </div>
    </div>    
   </div>
-</div>
+
+ 
+
+  <!-- Modal for djok video -->
+  <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header bottom-bord">
+          <h5 class="modal-title" id="exampleModalLabel">Djokovic</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <video class='img-fluid rounded whole-bord' width="100%" height="450" controls>
+            <source src="../static/assets/videos/djok_serve_pose.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <!-- Footer -->
   <div class="container-fluid p-4 footer-color">
